--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.7.2",
+    "expo": "^51.0.0",
+    "expo-media-library": "~16.0.3",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.11.1",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.21.9",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video": "^6.2.0",
+    "react-native-view-shot": "3.8.0",
+    "react-native-webview": "^13.10.3",
+    "react-native-youtube-iframe": "^2.3.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.34.1"
   },
   "private": true
 }
